--- a/setupy/server/templates/index.html
+++ b/setupy/server/templates/index.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="static/app.css" />
     </head>
     <body>
+        <div id="github-container">
+        <a href="https://github.com/aweidner/setupy">
+            <img width="149" height="149" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_red_aa0000.png?resize=149%2C149"
+            class="attachment-full size-full" alt="Fork me on GitHub" data-recalc-dims="1"></a>
+        </div>
         <div class="container">
             <section class="header center">
                 <h1>Setupy</h1>
